<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backcolor"
    
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="10dp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="12sp" />
    
       <LinearLayout
           android:id="@+id/rightLinerLayoutL2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

           <ImageButton
               android:id="@+id/imageButton1"
               android:layout_width="26dp"
               android:layout_height="25dp"
               android:layout_marginLeft="0dp"
               android:layout_marginTop="5dp"
               android:background="@color/color"
               android:contentDescription="@string/desc"
               android:src="@drawable/arr" />

           <TextView
               android:id="@+id/textView_categoryName"
               android:layout_width="170dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp"
               android:layout_marginTop="8dp"
               android:text="@string/clipNmae"
               android:textColor="@color/white"
               android:textSize="18sp" />

           <TextView
               android:id="@+id/clipTime"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:text="@string/clipTime"
               android:textColor="@color/white"
               android:textSize="16sp" />
       </LinearLayout>

 <LinearLayout
     android:id="@+id/rightLinerLayoutL3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >

     <TextView
         android:id="@+id/categry_fmly"
         android:layout_width="87dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
         android:text="@string/catfmly"
         android:textColor="@color/white"
         android:textSize="12sp" />

     <TextView
         android:id="@+id/categry_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.19"
         android:text="@string/cattime"
         android:textColor="@color/white"
         android:textSize="12sp" 
         android:layout_marginLeft="82dp"/>

 </LinearLayout>
  </LinearLayout>
   